fix white-space:pre-wrap per l'accapo dei testi

--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -229,6 +229,7 @@
             -webkit-border-radius: 2px;
             -o-border-radius: 2px;
             -moz-border-radius: 2px;
+            white-space: pre-wrap;
         }
     }
 }
